Also update quarks/scan marks in documentation

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -2112,8 +2112,8 @@
 %   The setting-equal functions.  Split both functions and feed
 %   \Arg{name_1} \Arg{signature_1} \meta{boolean_1}
 %   \Arg{name_2} \Arg{signature_2} \meta{boolean_2}
-%   \meta{copying~function} \meta{conditions} |,| \cs{q_recursion_tail}
-%   |,| \cs{q_recursion_stop}
+%   \meta{copying~function} \meta{conditions} |,| \cs{q_@@_recursion_tail}
+%   |,| \cs{q_@@_recursion_stop}
 %   to a first auxiliary.
 %    \begin{macrocode}
 \cs_set_protected:Npn \prg_set_eq_conditional:NNn
@@ -2343,12 +2343,12 @@
 %   First ensure that we actually get a properly evaluated string by
 %   expanding \cs{cs_to_str:N} twice.  If the function contained a
 %   colon, the auxiliary takes as |#1| the function name, delimited by
-%   the first colon, then the signature |#2|, delimited by \cs{q_mark},
-%   then \cs{c_true_bool} as |#3|, and |#4| cleans up until \cs{q_stop}.
-%   Otherwise, the |#1| contains the function name and \cs{q_mark}
+%   the first colon, then the signature |#2|, delimited by \cs{s_@@_mark},
+%   then \cs{c_true_bool} as |#3|, and |#4| cleans up until \cs{s_@@_stop}.
+%   Otherwise, the |#1| contains the function name and \cs{s_@@_mark}
 %   \cs{c_true_bool}, |#2| is empty, |#3| is \cs{c_false_bool}, and |#4|
 %   cleans up.  The second
-%   auxiliary trims the trailing \cs{q_mark} from the function name if
+%   auxiliary trims the trailing \cs{s_@@_mark} from the function name if
 %   present (that is, if the original function had no colon).
 %    \begin{macrocode}
 \cs_set_protected:Npn \@@_tmp:w #1
