--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -2010,7 +2010,7 @@
 %   is an extra subtlety: if the user inserts tokens for error recovery,
 %   they should be kept. Thus we also use an odd space character
 %   (with category code $7$) and keep tokens until that space character,
-%   dropping everything else until \cs{q_stop}. The \cs{exp_end:} prevents
+%   dropping everything else until \cs{s_@@_stop}. The \cs{exp_end:} prevents
 %   losing braces around the user-inserted text if any, and stops the
 %   expansion of \cs{exp:w}.  The group is used to prevent
 %   |\LaTeX3~error:| from being globally equal to \cs{scan_stop:}.
