--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -576,7 +576,7 @@
 %   Each comparison should call \cs{sort_return_same:} or
 %   \cs{sort_return_swapped:} exactly once.  If neither is called,
 %   \cs{@@_return_none_error:} is called, since the \texttt{return_mark}
-%   removes tokens until \cs{q_mark}.  If one is called, the
+%   removes tokens until \cs{s_@@_mark}.  If one is called, the
 %   \texttt{return_mark} auxiliary removes everything except
 %   \cs{@@_return_same:w} (or its \texttt{swapped} analogue) followed by
 %   \cs{@@_return_none_error:}.  Finally if two or more are called,
@@ -716,7 +716,7 @@
 %     \tl_if_blank:nF {#1}
 %       {
 %         \__sort:nnNnn { } { } #2
-%           #1 \q_recursion_tail \q_recursion_stop
+%           #1 \q__sort_recursion_tail \q__sort_recursion_stop
 %       }
 %   }
 % \cs_new:Npn \__sort:nnNnn #1#2#3#4#5
@@ -751,7 +751,7 @@
 %   ~~~~~~\meta{extra arguments}\\
 %   ~~|}|\\
 %   \cs{@@_loop:wNn}~\ldots{}~\meta{prepared tokens}\\
-%   ~~\meta{end-loop}~|{}|~\cs{q_stop}
+%   ~~\meta{end-loop}~|{}|~\cs{s_@@_stop}
 % \end{quote}
 % In this example, which matches the structure of
 % \cs{@@_quick_split_i:NnnnnNn} and a few other functions below, the
@@ -791,13 +791,13 @@
 %
 % The third speed up is to avoid |\use:ff| using a continuation-passing
 % style: \cs{@@_quick_split:NnNn} expects a list followed by
-% \cs{q_mark} \Arg{code}, and expands to \meta{code} \meta{sorted list}.
+% \cs{s_@@_mark} \Arg{code}, and expands to \meta{code} \meta{sorted list}.
 % Sorting the two parts of the list around the pivot is done with
 % \begin{quote}
 %   \ttfamily
-%   \cs{@@_quick_split:NnNn} |#2| \ldots{} \cs{q_mark}\\
+%   \cs{@@_quick_split:NnNn} |#2| \ldots{} \cs{s_@@_mark}\\
 %   ~~|{|\\
-%   ~~~~\cs{@@_quick_split:NnNn} |#1| \ldots{} \cs{q_mark} \Arg{code}\\
+%   ~~~~\cs{@@_quick_split:NnNn} |#1| \ldots{} \cs{s_@@_mark} \Arg{code}\\
 %   ~~~~\Arg{pivot}\\
 %   ~~|}|
 % \end{quote}
@@ -832,7 +832,7 @@
 % argument of the third \cs{use:n}, hence must remain in memory, and so
 % on.  The memory consumption grows quadratically with the number of
 % nested \cs{use:n}.  In practice, this means that we must read
-% everything until a trailing \cs{q_stop} once in a while, otherwise
+% everything until a trailing \cs{s_@@_stop} once in a while, otherwise
 % sorting lists of more than a few thousand items would exhaust a
 % typical \TeX{}'s memory.
 %
@@ -855,8 +855,8 @@
 %   \texttt{prepare_end} auxiliary finds the prepared token list
 %   as~|#4|.  The scene is then set up for \cs{@@_quick_split:NnNn},
 %   which sorts the prepared list and perform the post action placed
-%   after \cs{q_mark}, namely removing the trailing \cs{s_stop} and
-%   \cs{q_stop} and leaving \cs{exp_stop_f:} to stop
+%   after \cs{s_@@_mark}, namely removing the trailing \cs{s_@@_stop} and
+%   \cs{s_@@_stop} and leaving \cs{exp_stop_f:} to stop
 %   \texttt{f}-expansion.
 %    \begin{macrocode}
 \cs_new:Npn \tl_sort:nN #1#2
@@ -970,9 +970,9 @@
 %   auxiliaries here) and another copy~|#6| of the fake item.  All those
 %   are discarded except the function~|#5|.  This function receives
 %   lists~|#1| and~|#2| of items less than or greater than the
-%   pivot~|#3|, then a continuation code~|#5| just after \cs{q_mark}.
+%   pivot~|#3|, then a continuation code~|#5| just after \cs{s_@@_mark}.
 %   To avoid a memory problem described earlier, all of the ending
-%   functions read~|#6| until \cs{q_stop} and place~|#6| back into the
+%   functions read~|#6| until \cs{s_@@_stop} and place~|#6| back into the
 %   input stream.  When the lists |#1| and~|#2| are empty, the
 %   \texttt{single} auxiliary simply places the continuation~|#5| before
 %   the pivot~|{#3}|.  When |#2|~is empty, |#1|~is sorted and placed
