--- a/l3experimental/l3draw/l3draw-state.dtx
+++ b/l3experimental/l3draw/l3draw-state.dtx
@@ -177,17 +177,17 @@
     \@@_color_aux:Vn \l_@@_color_tmp_tl {#1}
   }
 \cs_new_protected:Npn \@@_color_aux:nn #1#2
-  { \@@_color:nw {#2} #1 \q_stop }
+  { \@@_color:nw {#2} #1 \s_@@_stop }
 \cs_generate_variant:Nn \@@_color_aux:nn { V }
-\cs_new_protected:Npn \@@_color:nw #1#2 ~ #3 \q_stop
-  { \use:c { @@_color_ #2 :nw } {#1} #3 \q_stop }
-\cs_new_protected:Npn \@@_color_cmyk:nw #1#2 ~ #3 ~ #4 ~ #5 \q_stop
+\cs_new_protected:Npn \@@_color:nw #1#2 ~ #3 \s_@@_stop
+  { \use:c { @@_color_ #2 :nw } {#1} #3 \s_@@_stop }
+\cs_new_protected:Npn \@@_color_cmyk:nw #1#2 ~ #3 ~ #4 ~ #5 \s_@@_stop
   { \use:c { @@_backend_color_ #1 _cmyk:nnnn } {#2} {#3} {#4} {#5} }
-\cs_new_protected:Npn \@@_color_gray:nw #1#2 \q_stop
+\cs_new_protected:Npn \@@_color_gray:nw #1#2 \s_@@_stop
   { \use:c { @@_backend_color_ #1 _gray:n } {#2} }
-\cs_new_protected:Npn \@@_color_rgb:nw #1#2 ~ #3 ~ #4 \q_stop
+\cs_new_protected:Npn \@@_color_rgb:nw #1#2 ~ #3 ~ #4 \s_@@_stop
   { \use:c { @@_backend_color_ #1 _rgb:nnn } {#2} {#3} {#4} }
-\cs_new_protected:Npn \@@_color_spot:nw #1#2 ~ #3 \q_stop
+\cs_new_protected:Npn \@@_color_spot:nw #1#2 ~ #3 \s_@@_stop
   { \use:c { @@_backend_color_ #1 _spot:nn } {#2} {#3} }
 %    \end{macrocode}
 % \end{macro}
