--- a/l3experimental/l3str/l3str-format.dtx
+++ b/l3experimental/l3str/l3str-format.dtx
@@ -191,7 +191,7 @@
 %
 % \begin{macro}[EXP]{\@@_format_if_digit:NTF}
 %   Here we expect |#1| to be a character with category other, or
-%   \cs{s_stop}.
+%   \cs{s_@@_stop}.
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \@@_format_if_digit:N #1 { TF }
   {
@@ -203,9 +203,9 @@
 %
 % \begin{macro}[EXP]
 %   {\@@_format_put:nw, \@@_format_put:ow, \@@_format_put:fw}
-%   Put |#1| after an \cs{s_stop} delimiter.
+%   Put |#1| after an \cs{s_@@_stop} delimiter.
 %    \begin{macrocode}
-\cs_new:Npn \@@_format_put:nw #1 #2 \s_stop { #2 \s_stop #1 }
+\cs_new:Npn \@@_format_put:nw #1 #2 \s_@@_stop { #2 \s_@@_stop #1 }
 \cs_generate_variant:Nn \@@_format_put:nw { o , f }
 %    \end{macrocode}
 % \end{macro}
@@ -256,7 +256,7 @@
 \cs_new:Npn \@@_format_parse:n #1
   {
     \exp_last_unbraced:Nf \@@_format_parse_auxi:NN
-      { \__kernel_str_to_other:n {#1} } \s_stop \s_stop {#1}
+      { \__kernel_str_to_other:n {#1} } \s_@@_stop \s_@@_stop {#1}
   }
 \cs_new:Npx \@@_format_parse_auxi:NN #1#2
   {
@@ -301,11 +301,11 @@
   }
 \cs_new:Npn \@@_format_parse_auxvii:nN #1#2
   {
-    \token_if_eq_meaning:NNTF \s_stop #2
+    \token_if_eq_meaning:NNTF \s_@@_stop #2
       { \@@_format_parse_end:nwn { #1 ? } #2 }
       { \@@_format_parse_end:nwn { #1 #2 } }
   }
-\cs_new:Npn \@@_format_parse_end:nwn #1 #2 \s_stop \s_stop #3
+\cs_new:Npn \@@_format_parse_end:nwn #1 #2 \s_@@_stop \s_@@_stop #3
   {
     \tl_if_empty:nF {#2}
       { \__kernel_msg_expandable_error:nnn { str } { invalid-format } {#3} }
@@ -455,9 +455,9 @@
 %   \end{quote}
 %   First check that the \meta{alignment} is not |=|, and set the
 %   default alignment |?| to |<|.  Place the modified information after
-%   a trailing \cs{s_stop} for later retrieval.  Then check that there
+%   a trailing \cs{s_@@_stop} for later retrieval.  Then check that there
 %   was no \meta{sign}.  The width will be useful later, store it after
-%   \cs{s_stop}.  Afterwards, store the precision, and the function
+%   \cs{s_@@_stop}.  Afterwards, store the precision, and the function
 %   \cs{@@_range:nnn} that will be used to extract the first
 %   |#5| characters of the string.
 %   There is a need to use the internal function, as otherwise
@@ -495,14 +495,14 @@
           }
       }
     \@@_format_tl_s:NNnnNNn
-    \s_stop
+    \s_@@_stop
   }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}[EXP]{\@@_format_tl_s:NNnnNNn}
 %   \begin{quote}
-%     \cs{@@_format_tl_s:NNnnNNn} \cs{s_stop} \meta{function}
+%     \cs{@@_format_tl_s:NNnnNNn} \cs{s_@@_stop} \meta{function}
 %     \Arg{arguments} \Arg{width} \meta{fill} \meta{alignment}
 %     \Arg{token list}
 %   \end{quote}
@@ -617,12 +617,12 @@
 %   \end{quote}
 %   First set the
 %   default alignment |?| to |>|.  Place the modified information after
-%   a trailing \cs{s_stop} for later retrieval.  Then check the
+%   a trailing \cs{s_@@_stop} for later retrieval.  Then check the
 %   \meta{sign}: if the integer is negative, always put~|-|.  Otherwise,
 %   if the format's \meta{sign} is |~|, put a space (with category
 %   \enquote{other}); if it is~|+| put |+|; if it is |-| (default), put
 %   nothing, represented as a brace group.  The width |#4| will be
-%   useful later, store it after \cs{s_stop}.  Afterwards, check that
+%   useful later, store it after \cs{s_@@_stop}.  Afterwards, check that
 %   the \meta{precision} was absent.  Finally, dispatch depending on the
 %   \meta{style}.
 %    \begin{macrocode}
@@ -660,14 +660,14 @@
           { str } { invalid-style-format } {#6} { int }
         \@@_format_int:NwnnNNn \use:n
       }
-    \s_stop {#7}
+    \s_@@_stop {#7}
   }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}[EXP]{\@@_format_int:NwnnNNn}
 %   \begin{quote}
-%     \cs{@@_format_int:NwnnNNn} \meta{function} \cs{s_stop}
+%     \cs{@@_format_int:NwnnNNn} \meta{function} \cs{s_@@_stop}
 %     \Arg{width} \Arg{sign} \meta{fill} \meta{alignment} \Arg{integer}
 %   \end{quote}
 %   Use the |format_align| function corresponding to the
@@ -680,7 +680,7 @@
 %     \item the \meta{fill} character.
 %   \end{itemize}
 %    \begin{macrocode}
-\cs_new:Npn \@@_format_int:NwnnNNn #1#2 \s_stop #3#4#5#6#7
+\cs_new:Npn \@@_format_int:NwnnNNn #1#2 \s_@@_stop #3#4#5#6#7
   {
     \exp_args:Nc \exp_args:Nf
       { @@_format_align_#6:nnnN }
@@ -728,13 +728,13 @@
 %     \Arg{floating point}
 %   \end{quote}
 %   First set the default alignment |?| to |>|.  Place the modified
-%   information after a trailing \cs{s_stop} for later retrieval.  Then
+%   information after a trailing \cs{s_@@_stop} for later retrieval.  Then
 %   check the \meta{format sign} and the \meta{fp sign}: if the floating
 %   point is negative, always put~|-|.  Otherwise (including
 %   \texttt{nan}), if the format's \meta{sign} is |~|, put a space (with
 %   category \enquote{other}); if it is~|+| put |+|; if it is |-|
 %   (default), put nothing, represented as a brace group.  The width
-%   |#4| will be useful later, store it after \cs{s_stop}.  Afterwards,
+%   |#4| will be useful later, store it after \cs{s_@@_stop}.  Afterwards,
 %   check the \meta{precision}: if it was not given, replace it by $6$
 %   (default precision) unless no \meta{style} was given: in that case
 %   we want to use whatever precision is needed to fully describe the
@@ -776,20 +776,20 @@
           { str } { invalid-style-format } {#6} { fp }
         \@@_format_fp:wnnnNNn \@@_format_fp_g:nn
       }
-    \s_stop {#7}
+    \s_@@_stop {#7}
   }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}[EXP]{\@@_format_fp:wnnnNNn}
 %   \begin{quote}
-%     \cs{@@_format_fp:wnnnNNn} \meta{formatting function} \cs{s_stop}
+%     \cs{@@_format_fp:wnnnNNn} \meta{formatting function} \cs{s_@@_stop}
 %     \Arg{precision} \Arg{width} \Arg{sign} \meta{fill}
 %     \meta{alignment} \Arg{floating point}
 %   \end{quote}
 %    \begin{macrocode}
 \cs_new:Npn \@@_format_fp:wnnnNNn
-    #1 \s_stop #2 #3 #4 #5#6 #7
+    #1 \s_@@_stop #2 #3 #4 #5#6 #7
   {
     \exp_args:Nc \exp_args:Nf
       { @@_format_align_#6:nnnN }
@@ -850,7 +850,7 @@
           { \prg_replicate:nn { #4 - \c__fp_prec_int + 1 } { 0 } }
         \@@_format_put:nw { #1 . #2 }
       }
-    \use_none:n \s_stop
+    \use_none:n \s_@@_stop
   }
 %    \end{macrocode}
 % \end{macro}
@@ -947,11 +947,11 @@
 \cs_new:Npn \@@_format_fp_trim:w #1 e
   {
     \@@_format_fp_trim_loop:w #1
-      ; \@@_format_fp_trim_loop:w 0; \@@_format_fp_trim_dot:w .; \s_stop e
+      ; \@@_format_fp_trim_loop:w 0; \@@_format_fp_trim_dot:w .; \s_@@_stop e
   }
 \cs_new:Npn \@@_format_fp_trim_loop:w #1 0; #2 { #2 #1 ; #2 }
 \cs_new:Npn \@@_format_fp_trim_dot:w #1 .; { \@@_format_fp_trim_end:w #1 ; }
-\cs_new:Npn \@@_format_fp_trim_end:w #1 ; #2 \s_stop { #1 }
+\cs_new:Npn \@@_format_fp_trim_end:w #1 ; #2 \s_@@_stop { #1 }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
