Replace quarks by scan marks in l3backend

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -98,10 +98,10 @@
               }
               {
                 \exp_last_unbraced:Nx \@@_backend_pickup:w
-                  { \current@color } \q_stop #1
+                  { \current@color } \s_@@_stop #1
               }
           }
-        \cs_new_protected:Npn \@@_backend_pickup:w #1 ~ #2 \q_stop #3
+        \cs_new_protected:Npn \@@_backend_pickup:w #1 ~ #2 \s_@@_stop #3
           { \tl_set:Nn #3 { #1 ~ #2 } }
       }
   }
@@ -186,10 +186,10 @@
         \cs_set_protected:Npn \@@_backend_pickup:N #1
           {
             \exp_last_unbraced:Nx \@@_backend_pickup:w
-              { \current@color } ~ 0 ~ 0 ~ 0 \q_stop #1
+              { \current@color } ~ 0 ~ 0 ~ 0 \s_@@_stop #1
           }
         \cs_new_protected:Npn \@@_backend_pickup:w
-          #1 ~ #2 ~ #3 ~ #4 ~ #5 ~ #6 \q_stop #7
+          #1 ~ #2 ~ #3 ~ #4 ~ #5 ~ #6 \s_@@_stop #7
           {
             \str_if_eq:nnTF {#2} { g }
               { \tl_set:Nn #7 { gray ~ #1 } }
