Replace quarks by scan marks in l3keys2e

--- a/l3packages/l3keys2e/l3keys2e.dtx
+++ b/l3packages/l3keys2e/l3keys2e.dtx
@@ -158,6 +158,13 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{variable}{\s_@@_stop}
+%   Internal scan marks.
+%    \begin{macrocode}
+\scan_new:N \s_@@_stop
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{macro}{\l_@@_process_class_bool}
 %   A flag to indicate that class options should be processed for
 %   packages.
@@ -299,8 +306,8 @@
 %   so that there will always be a sign available.
 %    \begin{macrocode}
 \cs_new:Npn \@@_latexe_remove_equals:n #1
-  { \@@_latexe_remove_equals:w #1 = \q_stop }
-\cs_new:Npn \@@_latexe_remove_equals:w #1 = #2 \q_stop { \exp_not:n {#1} }
+  { \@@_latexe_remove_equals:w #1 = \s_@@_stop }
+\cs_new:Npn \@@_latexe_remove_equals:w #1 = #2 \s_@@_stop { \exp_not:n {#1} }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
