Remove \exp_not:N from scan marks

--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -877,7 +877,7 @@
       ; \exp_not:N \@@_parse_one_register_dim:ww
       \tl_to_str:n { pt } ; \exp_not:N \@@_parse_one_register_mu:www
       . \tl_to_str:n { pt } ; \exp_not:N \@@_parse_one_register_int:www
-      \exp_not:N \s_@@_stop
+      \s_@@_stop
   }
 \exp_args:Nno \use:nn
   { \cs_new:Npn \@@_parse_one_register_auxii:wwwNw #1 . #2 }
