--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -2785,7 +2785,7 @@
         \cs_set_protected:Npn \@@_store_unused:w
           ####1 \l_@@_relative_tl /
           ####2 \l_@@_relative_tl /
-          ####3 \exp_not:N \s_@@_stop
+          ####3 \s_@@_stop
       }
         {
           \tl_if_blank:nF {##1}
@@ -2805,7 +2805,7 @@
       {
         \@@_store_unused:w \l_keys_path_str
           \l_@@_relative_tl / \l_@@_relative_tl /
-          \exp_not:N \s_@@_stop
+          \s_@@_stop
       }
   }
 \cs_new_protected:Npn \@@_store_unused:w { }
