--- a/l3packages/xtemplate/xtemplate.dtx
+++ b/l3packages/xtemplate/xtemplate.dtx
@@ -1334,7 +1334,7 @@
 \use:x
   {
     \cs_new_protected:Npn \exp_not:N \@@_split_keytype_aux:w
-      ##1 \token_to_str:N : ##2 \exp_not:N \s_@@_stop
+      ##1 \token_to_str:N : ##2 \s_@@_stop
       {
         \tl_put_right:Nx \exp_not:N \l_@@_key_name_tl
           { \exp_not:N \tl_to_str:n {##1} }
@@ -1342,7 +1342,7 @@
           {
             \tl_put_right:Nn \exp_not:N \l_@@_key_name_tl
               { \token_to_str:N : }
-            \exp_not:N \@@_split_keytype_aux:w ##2 \exp_not:N \s_@@_stop
+            \exp_not:N \@@_split_keytype_aux:w ##2 \s_@@_stop
           }
           {
             \exp_not:N \tl_if_empty:NTF \exp_not:N \l_@@_key_name_tl
