--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -2258,11 +2258,11 @@
     \exp_not:N \else:
       \exp_not:N \exp_after:wN \exp_not:N \@@_generate_variant:ww
         \exp_not:N \token_to_meaning:N #1 \tl_to_str:n { ma }
-          \exp_not:N \s_@@_mark
-        \exp_not:N \s_@@_mark \cs_new_protected:Npx
+          \s_@@_mark
+        \s_@@_mark \cs_new_protected:Npx
         \tl_to_str:n { pr }
-        \exp_not:N \s_@@_mark \cs_new:Npx
-        \exp_not:N \s_@@_stop
+        \s_@@_mark \cs_new:Npx
+        \s_@@_stop
     \exp_not:N \fi:
   }
 \exp_last_unbraced:NNNNo
@@ -2486,8 +2486,7 @@
     #1#2 \s_@@_mark #3 ~ #4 \s_@@_stop #5#6#7#8
   {
     \scan_stop: \scan_stop: \fi:
-    \exp_not:N \s_@@_mark
-    \exp_not:N \s_@@_stop
+    \s_@@_mark \s_@@_stop
     \exp_not:N #6
     \exp_not:c { #7 : #8 #1 #3 }
   }
@@ -2597,15 +2596,15 @@
 \cs_new_protected:Npx \@@_generate_internal_variant:n #1
   {
     \exp_not:N \@@_generate_internal_variant:wwnNwn
-      #1 \exp_not:N \s_@@_mark
+      #1 \s_@@_mark
         { \cs_set_eq:NN \exp_not:N \@@_tmp:w \cs_new_protected:Npx }
         \cs_new_protected:cpn
         \use:x
-      \token_to_str:N x \exp_not:N \s_@@_mark
+      \token_to_str:N x \s_@@_mark
         { }
         \cs_new:cpn
         \exp_not:N \tex_expanded:D
-    \exp_not:N \s_@@_stop
+    \s_@@_stop
       {#1}
   }
 \exp_last_unbraced:NNNNo
