Document some weird changes

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1335,7 +1335,9 @@
 %    \end{macrocode}
 %
 % \begin{variable}{\s_@@_stop}
-%   Internal scan marks.
+%   Internal scan marks. This code has to be reload-safe, so this one
+%   has to be guarded with \cs{if_cs_exist:N} (\cs{cs_if_exist:NF}) wouldn't
+%   do because it returns false for control sequences equal to \cs{scan_stop:}.
 %    \begin{macrocode}
 \reverse_if:N \if_cs_exist:N \s_@@_stop
   \scan_new:N \s_@@_stop
