Fix some signatures

--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -607,30 +607,30 @@
 %   \end{description}
 %   Any other signature causes an error, as does a function without signature.
 %
-% \begin{macro}{\@@_test_generate_aux:nnNN, \@@_test_generate_choose:nN }
+% \begin{macro}{\@@_test_generate_aux:nnNNnNnn, \@@_test_generate_choose:nNnNnn }
 %    \begin{macrocode}
 \cs_new_protected:Npn \__kernel_quark_test_generate:NNNn #1
   {
-    \exp_last_unbraced:Nf \@@_test_generate_aux:nnNN
+    \exp_last_unbraced:Nf \@@_test_generate_aux:nnNNnNnn
       { \cs_split_function:N #1 }
       #1 { test }
   }
 \cs_new_protected:Npn \__kernel_quark_conditional_generate:NNnn #1
   {
-    \exp_last_unbraced:Nf \@@_test_generate_aux:nnNN
+    \exp_last_unbraced:Nf \@@_test_generate_aux:nnNNnNnn
       { \cs_split_function:N #1 }
       #1 { conditional }
   }
-\cs_new_protected:Npn \@@_test_generate_aux:nnNN #1 #2 #3 #4
+\cs_new_protected:Npn \@@_test_generate_aux:nnNNnNnn #1 #2 #3 #4
   {
     \reverse_if:N \tex_ifodd:D #3
       \__kernel_msg_error:nnx { kernel } { missing-colon }
         { \token_to_str:N #4 }
       \exp_after:wN \use_none:nnnnnn
     \fi:
-    \use:n { \@@_test_generate_choose:nN {#2} #4 }
+    \use:n { \@@_test_generate_choose:nNnNnn {#2} #4 }
   }
-\cs_new_protected:Npn \@@_test_generate_choose:nN #1 #2 #3
+\cs_new_protected:Npn \@@_test_generate_choose:nNnNnn #1 #2 #3
   {
     \cs_if_exist_use:cTF { @@_#3_generate_#1:NNNn } {#2}
       {
@@ -650,53 +650,53 @@
 %     \@@_test_generate_NN:NNNn, \@@_test_generate_NN:NNNn,
 %   }
 %   These macros implement the six possibilities mentioned above, passing
-%   the right arguments to \cs{@@_test_generate_aux_do:nNNnnnn},
+%   the right arguments to \cs{@@_test_generate_aux_do:nNNnnnnN},
 %   which defines some auxiliaries, and then to
-%   \cs{@@_test_generate_define_tl:nNNNNN} (|:n(n)| variants) or to
-%   \cs{@@_test_generate_define_ifx:nNNNNN} (|:N(n)|) which define the
+%   \cs{@@_test_generate_define_tl:nNNNNn} (|:n(n)| variants) or to
+%   \cs{@@_test_generate_define_ifx:nNNNNn} (|:N(n)|) which define the
 %   main conditionals.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_test_generate_n:NNNn #1 #2 #3 #4
   {
-    \@@_test_generate_aux_do:nNNnnnn {#4} #2 #3 { none } { } { } { }
-      \@@_test_generate_define_tl:nNNNNN #1 { }
+    \@@_test_generate_aux_do:nNNnnnnN {#4} #2 #3 { none } { } { } { }
+      \@@_test_generate_define_tl:nNNNNn #1 { }
   }
 \cs_new_protected:Npn \@@_test_generate_nn:NNNn #1 #2 #3 #4
   {
-    \@@_test_generate_aux_do:nNNnnnn {#4} #2 #3 { i } { n } {##1} {##2}
-      \@@_test_generate_define_tl:nNNNNN #1 { \use_none:n }
+    \@@_test_generate_aux_do:nNNnnnnN {#4} #2 #3 { i } { n } {##1} {##2}
+      \@@_test_generate_define_tl:nNNNNn #1 { \use_none:n }
   }
 \cs_new_protected:Npn \@@_test_generate_nN:NNNn #1 #2 #3 #4
   {
-    \@@_test_generate_aux_do:nNNnnnn {#4} #2 #3 { i } { n } {##1} {##2}
-      \@@_test_generate_define_break_tl:nNNNNN #1 { }
+    \@@_test_generate_aux_do:nNNnnnnN {#4} #2 #3 { i } { n } {##1} {##2}
+      \@@_test_generate_define_break_tl:nNNNNn #1 { }
   }
 \cs_new_protected:Npn \@@_test_generate_N:NNNn #1 #2 #3 #4
   {
-    \@@_test_generate_aux_do:nNNnnnn {#4} #2 #3 { none } { } { } { }
-      \@@_test_generate_define_ifx:nNNNNN #1 { }
+    \@@_test_generate_aux_do:nNNnnnnN {#4} #2 #3 { none } { } { } { }
+      \@@_test_generate_define_ifx:nNNNNn #1 { }
   }
 \cs_new_protected:Npn \@@_test_generate_Nn:NNNn #1 #2 #3 #4
   {
-    \@@_test_generate_aux_do:nNNnnnn {#4} #2 #3 { i } { n } {##1} {##2}
-      \@@_test_generate_define_ifx:nNNNNN #1 { \use_none:n }
+    \@@_test_generate_aux_do:nNNnnnnN {#4} #2 #3 { i } { n } {##1} {##2}
+      \@@_test_generate_define_ifx:nNNNNn #1 { \use_none:n }
   }
 \cs_new_protected:Npn \@@_test_generate_NN:NNNn #1 #2 #3 #4
   {
-    \@@_test_generate_aux_do:nNNnnnn {#4} #2 #3 { i } { n } {##1} {##2}
-      \@@_test_generate_define_break_ifx:nNNNNN #1 { }
+    \@@_test_generate_aux_do:nNNnnnnN {#4} #2 #3 { i } { n } {##1} {##2}
+      \@@_test_generate_define_break_ifx:nNNNNn #1 { }
   }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}{
-%     \@@_test_generate_aux_do:nNNnnnn,
-%     \@@_test_define_aux:NNNnnN
+%     \@@_test_generate_aux_do:nNNnnnnN,
+%     \@@_test_define_aux:NNNNnnN
 %   }
-%   \cs{@@_test_generate_aux_do:nNNnnnn} makes the conrol sequence names
-%   which will be used by \cs{@@_test_define_aux:NNNnnN}, and then later
-%   by \cs{@@_test_generate_define_tl:nNNNNN} or
-%   \cs{@@_test_generate_define_ifx:nNNNNN}. The control sequences defined
+%   \cs{@@_test_generate_aux_do:nNNnnnnN} makes the conrol sequence names
+%   which will be used by \cs{@@_test_define_aux:NNNNnnN}, and then later
+%   by \cs{@@_test_generate_define_tl:nNNNNn} or
+%   \cs{@@_test_generate_define_ifx:nNNNNn}. The control sequences defined
 %   here are analogous to \cs{@@_if_recursion_tail:w} and to
 %   \cs[no-index]{use_(none|i)_delimit_by_q_recursion_stop:(|n)w}.
 %
@@ -713,14 +713,14 @@
 %   Note that the actual quarks are \emph{not} defined here. They should
 %   be defined separately using \cs{quark_new:N}.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_test_generate_aux_do:nNNnnnn #1 #2 #3 #4 #5
+\cs_new_protected:Npn \@@_test_generate_aux_do:nNNnnnnN #1 #2 #3 #4 #5
   {
-    \exp_args:Ncc \@@_test_define_aux:NNNnnN
+    \exp_args:Ncc \@@_test_define_aux:NNNNnnN
       { #1 _if_ \@@_get_name:N #2 :w }
       { #1 _use_ #4 _delimit_by_q_ \@@_get_name:N #3 : #5 w }
       #2 #3
   }
-\cs_new_protected:Npn \@@_test_define_aux:NNNnnN #1 #2 #3 #4 #5 #6 #7
+\cs_new_protected:Npn \@@_test_define_aux:NNNNnnN #1 #2 #3 #4 #5 #6 #7
   {
     \cs_gset:Npn #1  ##1 #3 ##2 ? ##3 ?! { ##1 ##2 }
     \cs_gset:Npn #2  ##1 #6 #4 {#5}
@@ -730,17 +730,17 @@
 % \end{macro}
 %
 % \begin{macro}{
-%     \@@_test_generate_define_tl:nNNNNN,
-%     \@@_test_generate_define_ifx:nNNNNN
+%     \@@_test_generate_define_tl:nNNNNn,
+%     \@@_test_generate_define_ifx:nNNNNn
 %   }
 % \begin{macro}{
-%     \@@_test_generate_define_break_tl:nNNNNN,
-%     \@@_test_generate_define_break_ifx:nNNNNN
+%     \@@_test_generate_define_break_tl:nNNNNn,
+%     \@@_test_generate_define_break_ifx:nNNNNn
 %   }
 %   Finally, these two macros define the main conditional function using
 %   what's been set up before.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_test_generate_define_tl:nNNNNN #1 #2 #3 #4 #5 #6
+\cs_new_protected:Npn \@@_test_generate_define_tl:nNNNNn #1 #2 #3 #4 #5 #6
   {
     \cs_new:Npn #5 #1
       {
@@ -749,7 +749,7 @@
           {#3} {#6}
       }
   }
-\cs_new_protected:Npn \@@_test_generate_define_ifx:nNNNNN #1 #2 #3 #4 #5 #6
+\cs_new_protected:Npn \@@_test_generate_define_ifx:nNNNNn #1 #2 #3 #4 #5 #6
   {
     \cs_new:Npx #5 #1
       {
@@ -760,10 +760,10 @@
         \exp_not:N \fi:
       }
   }
-\cs_new_protected:Npn \@@_test_generate_define_break_tl:nNNNNN #1 #2 #3
-  { \@@_test_generate_define_tl:nNNNNN {##1##2} #2 {##2} }
-\cs_new_protected:Npn \@@_test_generate_define_break_ifx:nNNNNN #1 #2 #3
-  { \@@_test_generate_define_ifx:nNNNNN {##1##2} #2 {##2} }
+\cs_new_protected:Npn \@@_test_generate_define_break_tl:nNNNNn #1 #2 #3
+  { \@@_test_generate_define_tl:nNNNNn {##1##2} #2 {##2} }
+\cs_new_protected:Npn \@@_test_generate_define_break_ifx:nNNNNn #1 #2 #3
+  { \@@_test_generate_define_ifx:nNNNNn {##1##2} #2 {##2} }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
