--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1405,6 +1405,9 @@
 % \begin{macro}{\ior_shell_open:Nn}
 % \begin{macro}{\@@_shell_open:nN}
 %   Actually much easier than either the standard open or input versions!
+%   When calling \cs{__kernel_ior_open:Nn} the file the pipe is added to
+%   signal a shell command, but the quotes are not added yet---they are
+%   added later by \cs{__kernel_file_name_quote:n}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \ior_shell_open:Nn #1#2
   {
@@ -1419,7 +1422,7 @@
         \__kernel_msg_error:nnx
           { kernel } { quote-in-shell } {#1}
       }
-      { \__kernel_ior_open:Nn #2 { "|#1" } }
+      { \__kernel_ior_open:Nn #2 { |#1 } }
   }
 \__kernel_msg_new:nnnn { kernel } { pipe-failed }
   { Cannot~run~piped~system~commands. }
