Hard-code names of recursion quarks in __kernel_quark_test_generate
All uses of \__kernel_quark_test_generate:NNNn had arguments
number 2, 3, 4 being \q_@@_recursion_tail \q_@@_recursion_stop {@@}.
It seems less redundant to just give the {@@} argument.  Feel free
to revert this commit.

--- a/l3experimental/l3draw/l3draw.dtx
+++ b/l3experimental/l3draw/l3draw.dtx
@@ -1176,8 +1176,7 @@
 % \begin{macro}[EXP]{\@@_if_recursion_tail_stop_do:Nn}
 %   Functions to query recursion quarks.
 %    \begin{macrocode}
-\__kernel_quark_test_generate:NNNn \@@_if_recursion_tail_stop_do:Nn
-  \q_@@_recursion_tail \q_@@_recursion_stop { @@ }
+\__kernel_quark_test_generate:Nn \@@_if_recursion_tail_stop_do:Nn { @@ }
 %    \end{macrocode}
 % \end{macro}
 %
