--- a/l3kernel/l3kernel-functions.dtx
+++ b/l3kernel/l3kernel-functions.dtx
@@ -329,60 +329,63 @@
 %   and variable mappings.
 % \end{variable}
 %
-% \begin{function}{\__kernel_quark_test_generate:NNNn}
+% \begin{function}{\__kernel_quark_test_generate:Nn}
 %   \begin{syntax}
-%     \cs{__kernel_quark_test_generate:NNNn} \cs[no-index]{\meta{name}:\meta{arg spec}} \cs[no-index]{\meta{test-quark}} \cs[no-index]{\meta{delimit-quark}} \Arg{namespace}
+%     \cs{__kernel_quark_test_generate:Nn} \cs[no-index]{\meta{name}:\meta{arg spec}} \Arg{namespace}
 %   \end{syntax}
 %   Defines a quark-test function \cs[no-index]{\meta{name}:\meta{arg spec}}
-%   which tests if its argument is the \cs[no-index]{\meta{test-quark}},
+%   which tests if its argument is \cs[no-index]{q\meta{namespace}_recursion_tail},
 %   then acts accordingly, as described below for each possible
 %   \meta{arg spec}.
 %
 %   The \meta{arg spec} \emph{must} be one of the options listed
-%   below. \cs[no-index]{\meta{test-quark}} and \cs[no-index]{\meta{delimit-quark}}
+%   below. Both \cs[no-index]{q\meta{namespace}_recursion_tail}
+%   and \cs[no-index]{q\meta{namespace}_recursion_stop}
 %   should be valid quarks, defined with \cs{quark_new:N}, and
 %   \meta{namespace} should be the name space to be used internally
-%   in the definition of auxiliaries (for example |__module|).
+%   in the definition of auxiliaries (for example |__module|), obtained
+%   for instance as |@@| when using \pkg{l3docstrip}.
 %
-%   \cs{__kernel_quark_test_generate:NNNn} can define $6$ different
+%   \cs{__kernel_quark_test_generate:Nn} can define $6$ different
 %   types of quark-test functions. Which one is defined depends on
 %   the \meta{arg spec} of the given function:
 %   \begin{description}
 %     \def\makelabel#1{\texttt{#1}}
 %     \item[n]  defines \cs[no-index]{\meta{name}:n}  such that it
-%       checks if |#1| contains only \cs[no-index]{\meta{test-quark}}, and
-%       if so consumes all tokens up to \cs[no-index]{\meta{delimit-quark}}
+%       checks if |#1| contains only \cs[no-index]{q\meta{namespace}_recursion_tail}, and
+%       if so consumes all tokens up to \cs[no-index]{q\meta{namespace}_recursion_stop}
 %       (\emph{c.f.}~\cs{quark_if_recursion_tail_stop:n}).
 %     \item[nn] defines \cs[no-index]{\meta{name}:nn} such that it
-%       checks if |#1| contains only \cs[no-index]{\meta{test-quark}}, and
-%       if so consumes all tokens up to \cs[no-index]{\meta{delimit-quark}},
+%       checks if |#1| contains only \cs[no-index]{q\meta{namespace}_recursion_tail}, and
+%       if so consumes all tokens up to \cs[no-index]{q\meta{namespace}_recursion_stop},
 %       then executes the code |#2| after that
 %       (\emph{c.f.}~\cs{quark_if_recursion_tail_stop_do:nn}).
 %     \item[nN] defines \cs[no-index]{\meta{name}:nN} such that it
-%       checks if |#1| contains only \cs[no-index]{\meta{test-quark}}, and
+%       checks if |#1| contains only \cs[no-index]{q\meta{namespace}_recursion_tail}, and
 %       if so uses the \cs[no-index]{\meta{type}_map_break:} function |#2|
 %       (\emph{c.f.}~\cs{quark_if_recursion_tail_break:nN}).
-%       \cs[no-index]{\meta{delimit-quark}} is not used in this case.
+%       \cs[no-index]{q\meta{namespace}_recursion_stop} is not used in this case.
 %     \item[N]  defines \cs[no-index]{\meta{name}:N}  such that it
-%       checks if |#1| is \cs[no-index]{\meta{test-quark}}, and if so consumes
-%       all tokens up to \cs[no-index]{\meta{delimit-quark}}
+%       checks if |#1| is \cs[no-index]{q\meta{namespace}_recursion_tail}, and if so consumes
+%       all tokens up to \cs[no-index]{q\meta{namespace}_recursion_stop}
 %       (\emph{c.f.}~\cs{quark_if_recursion_tail_stop:N}).
 %     \item[Nn] defines \cs[no-index]{\meta{name}:Nn} such that it
-%       checks if |#1| is \cs[no-index]{\meta{test-quark}}, and if so consumes
-%       all tokens up to \cs[no-index]{\meta{delimit-quark}}, then executes
+%       checks if |#1| is \cs[no-index]{q\meta{namespace}_recursion_tail}, and if so consumes
+%       all tokens up to \cs[no-index]{q\meta{namespace}_recursion_stop}, then executes
 %       the code |#2| after that
 %       (\emph{c.f.}~\cs{quark_if_recursion_tail_stop_do:Nn}).
 %     \item[NN] defines \cs[no-index]{\meta{name}:NN} such that it
-%       checks if |#1| is \cs[no-index]{\meta{test-quark}}, and if so uses
+%       checks if |#1| is \cs[no-index]{q\meta{namespace}_recursion_tail}, and if so uses
 %       the \cs[no-index]{\meta{type}_map_break:} function |#2|
 %       (\emph{c.f.}~\cs{quark_if_recursion_tail_break:NN}).
-%       \cs[no-index]{\meta{delimit-quark}} is not used in this case.
+%       \cs[no-index]{q\meta{namespace}_recursion_stop} is not used in this case.
 %   \end{description}
 %   Any other signature, as well as a function without signature
 %   are errors, and in such case the definition is aborted.
 %
-%   \cs{__kernel_quark_test_generate:NNNn} does \emph{not} define
-%   the \cs[no-index]{\meta{test-quark}} and \cs[no-index]{\meta{delimit-quark}}.
+%   \cs{__kernel_quark_test_generate:Nn} does \emph{not} define
+%   the \cs[no-index]{q\meta{namespace}_recursion_tail} and
+%   \cs[no-index]{q\meta{namespace}_recursion_stop}.
 %   They should be manually defined with \cs{quark_new:N}.
 % \end{function}
 %
