--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -930,8 +930,7 @@
 % \begin{macro}[EXP]{\@@_if_recursion_tail_stop_do:nn}
 %   Functions to query recursion quarks.
 %    \begin{macrocode}
-\__kernel_quark_test_generate:NNNn \@@_if_recursion_tail_stop_do:nn
-  \q_@@_recursion_tail \q_@@_recursion_stop { @@ }
+\__kernel_quark_test_generate:Nn \@@_if_recursion_tail_stop_do:nn { @@ }
 %    \end{macrocode}
 % \end{macro}
 %
