--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -574,14 +574,16 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\__kernel_quark_test_generate:NNNn}
-%   The function \cs{__kernel_quark_test_generate:NNNn} defines |#1|
-%   in a similar way as \cs[no-index]{quark_if_recursion_tail_stop(_do):(N|n)(n)}.
-%   using |#2| (as \cs{q_recursion_tail}) as the test quark and |#3|
-%   (as \cs{q_recursion_stop}) as the delimiter quark. |#4| is the name-space
-%   to be used (for example |__quark|).
+% \begin{macro}{\__kernel_quark_test_generate:Nn}
+%   The function \cs{__kernel_quark_test_generate:Nn} defines |#1| in a
+%   similar way as
+%   \cs[no-index]{quark_if_recursion_tail_stop(_do):(N|n)(n)}.  using
+%   \cs[no-index]{q\meta{namespace}_recursion_tail} as the test quark
+%   and \cs[no-index]{q\meta{namespace}_recursion_stop} as the delimiter
+%   quark, where the \meta{namespace} is given by |#2| (for example
+%   |__test|).
 %
-%   There are six possible function types which this funciton can define,
+%   There are six possible function types which this function can define,
 %   and which is defined depends on the signature of the function being
 %   defined:
 %   \begin{description}
@@ -595,7 +597,7 @@
 %   Any other signature causes an error, as does a function without signature.
 %
 % \begin{macro}{\__kernel_quark_conditional_generate:NNnn}
-%   Similar to \cs{__kernel_quark_test_generate:NNNn}, but defines
+%   Similar to \cs{__kernel_quark_test_generate:Nn}, but defines
 %   quark branching conditionals like \cs{quark_if_nil:nTF}
 %   using |#2| as the test quark, |#3| as the name-space to define
 %   auxiliaries, and |#4| is the list of conditional variants to define.
@@ -607,14 +609,21 @@
 %   \end{description}
 %   Any other signature causes an error, as does a function without signature.
 %
-% \begin{macro}{\@@_test_generate_aux:nnNNnNnn, \@@_test_generate_choose:nNnNnn }
+% \begin{macro}{\@@_test_generate:NNNn, \@@_test_generate:Nccn,
+%   \@@_test_generate_aux:nnNNnNnn, \@@_test_generate_choose:nNnNnn}
 %    \begin{macrocode}
-\cs_new_protected:Npn \__kernel_quark_test_generate:NNNn #1
+\cs_new_protected:Npn \__kernel_quark_test_generate:Nn #1#2
+  {
+    \@@_test_generate:Nccn #1
+      { q #2 _recursion_tail } { q #2 _recursion_stop } {#2}
+  }
+\cs_new_protected:Npn \@@_test_generate:NNNn #1
   {
     \exp_last_unbraced:Nf \@@_test_generate_aux:nnNNnNnn
       { \cs_split_function:N #1 }
       #1 { test }
   }
+\cs_generate_variant:Nn \@@_test_generate:NNNn { Ncc }
 \cs_new_protected:Npn \__kernel_quark_conditional_generate:NNnn #1
   {
     \exp_last_unbraced:Nf \@@_test_generate_aux:nnNNnNnn
@@ -701,14 +710,13 @@
 %   \cs[no-index]{use_(none|i)_delimit_by_q_recursion_stop:(|n)w}.
 %
 %   The name is composed by the name-space and the name of the quarks.
-%   Suppose \cs{__kernel_quark_test_generate:NNNn} was used with:
+%   Suppose \cs{__kernel_quark_test_generate:Nn} was used with:
 %   \begin{verbatim}
-%     \__kernel_quark_test_generate:NNNn \__test_quark_tail:n
-%       \q__test_tail \q__test_stop { __test }
+%     \__kernel_quark_test_generate:NNNn \__test_quark_tail:n { __test }
 %   \end{verbatim}
-%   then the first auxiliary will be \cs[no-index]{__test_if_test_tail:w},
+%   then the first auxiliary will be \cs[no-index]{__test_if_test_recursion_tail:w},
 %   and the second one will be
-%   \cs[no-index]{__test_use_none_delimit_by_q_test_stop:w}.
+%   \cs[no-index]{__test_use_none_delimit_by_q_test_recursion_stop:w}.
 %
 %   Note that the actual quarks are \emph{not} defined here. They should
 %   be defined separately using \cs{quark_new:N}.
