--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2451,10 +2451,8 @@
 %   }
 %   Functions to query recursion quarks.
 %    \begin{macrocode}
-\__kernel_quark_test_generate:NNNn \@@_if_recursion_tail_stop:N
-  \q_@@_recursion_tail \q_@@_recursion_stop { @@ }
-\__kernel_quark_test_generate:NNNn \@@_if_recursion_tail_stop_do:nn
-  \q_@@_recursion_tail \q_@@_recursion_stop { @@ }
+\__kernel_quark_test_generate:Nn \@@_if_recursion_tail_stop:N { @@ }
+\__kernel_quark_test_generate:Nn \@@_if_recursion_tail_stop_do:nn { @@ }
 %    \end{macrocode}
 % \end{macro}
 %
