--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1434,8 +1434,7 @@
 % \begin{macro}[EXP]{\@@_if_recursion_tail_stop:n}
 %   Functions to query recursion quarks.
 %    \begin{macrocode}
-\__kernel_quark_test_generate:NNNn \@@_if_recursion_tail_stop:n
-  \q_@@_recursion_tail \q_@@_recursion_stop { @@ }
+\__kernel_quark_test_generate:Nn \@@_if_recursion_tail_stop:n { @@ }
 %    \end{macrocode}
 % \end{macro}
 %
