missing end{macro} added

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1128,6 +1128,7 @@
             \s_@@_stop
         }
 %    \end{macrocode}
+% \end{macro}
 %
 % \begin{macro}[EXP]{\@@_split_other_auxi:w}
 % \begin{macro}[EXP]{\@@_split_other_auxii:w}
