--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -987,7 +987,7 @@
 %   up to a \cs{s_@@_tail}. The loop ending macro will gobble everything to the
 %   last \cs{s_@@_mark} in this definition.
 %   If the end isn't reached yet, start the second loop splitting at other
-%   comments, and after that one iterate the current loop.
+%   commas, and after that one iterate the current loop.
 %    \begin{macrocode}
       \cs_new:Npn \@@_loop_active:NNw ##1 ##2 ##3 #1
         {
@@ -1047,7 +1047,7 @@
 %   at least one active equals sign in the current key--value pair. Therefore
 %   this is the execution branch for a key--value pair with an active equals
 %   sign. |##1| will be everything up to the first active equals sign. First it
-%   tests for other equal signs in the key name, which will eventually throw an
+%   tests for other equals signs in the key name, which will eventually throw an
 %   error via \cs{@@_misplaced_equal_after_active_error:w}. If none was found we
 %   forward the key to \cs{@@_split_active_auxii:w}.
 %    \begin{macrocode}
@@ -1059,7 +1059,7 @@
             \s_@@_stop
         }
 %    \end{macrocode}
-%   \cs{@@_split_active_auxii:w} get the correct key name with a leading
+%   \cs{@@_split_active_auxii:w} gets the correct key name with a leading
 %   \cs{s_@@_mark} as |##1|. It has to sanitise the remainder of the previous
 %   test and trims the key name which will be forwarded to
 %   \cs{@@_split_active_auxiii:w}.
