Have \__kernel_quark_test_generate:N read the module from the function

--- a/l3kernel/l3kernel-functions.dtx
+++ b/l3kernel/l3kernel-functions.dtx
@@ -329,9 +329,9 @@
 %   and variable mappings.
 % \end{variable}
 %
-% \begin{function}{\__kernel_quark_test_generate:Nn}
+% \begin{function}{\__kernel_quark_test_generate:N}
 %   \begin{syntax}
-%     \cs{__kernel_quark_test_generate:Nn} \cs[no-index]{\meta{name}:\meta{arg spec}} \Arg{namespace}
+%     \cs{__kernel_quark_test_generate:N} \cs[no-index]{\meta{name}:\meta{arg spec}}
 %   \end{syntax}
 %   Defines a quark-test function \cs[no-index]{\meta{name}:\meta{arg spec}}
 %   which tests if its argument is \cs[no-index]{q\meta{namespace}_recursion_tail},
@@ -346,7 +346,7 @@
 %   in the definition of auxiliaries (for example |__module|), obtained
 %   for instance as |@@| when using \pkg{l3docstrip}.
 %
-%   \cs{__kernel_quark_test_generate:Nn} can define $6$ different
+%   \cs{__kernel_quark_test_generate:N} can define $6$ different
 %   types of quark-test functions. Which one is defined depends on
 %   the \meta{arg spec} of the given function:
 %   \begin{description}
@@ -383,7 +383,7 @@
 %   Any other signature, as well as a function without signature
 %   are errors, and in such case the definition is aborted.
 %
-%   \cs{__kernel_quark_test_generate:Nn} does \emph{not} define
+%   \cs{__kernel_quark_test_generate:N} does \emph{not} define
 %   the \cs[no-index]{q\meta{namespace}_recursion_tail} and
 %   \cs[no-index]{q\meta{namespace}_recursion_stop}.
 %   They should be manually defined with \cs{quark_new:N}.
