--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -574,8 +574,8 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\__kernel_quark_test_generate:Nn}
-%   The function \cs{__kernel_quark_test_generate:Nn} defines |#1| in a
+% \begin{macro}{\__kernel_quark_test_generate:N}
+%   The function \cs{__kernel_quark_test_generate:N} defines |#1| in a
 %   similar way as
 %   \cs[no-index]{quark_if_recursion_tail_stop(_do):(N|n)(n)}.  using
 %   \cs[no-index]{q\meta{namespace}_recursion_tail} as the test quark
@@ -597,7 +597,7 @@
 %   Any other signature causes an error, as does a function without signature.
 %
 % \begin{macro}{\__kernel_quark_conditional_generate:NNnn}
-%   Similar to \cs{__kernel_quark_test_generate:Nn}, but defines
+%   Similar to \cs{__kernel_quark_test_generate:N}, but defines
 %   quark branching conditionals like \cs{quark_if_nil:nTF}
 %   using |#2| as the test quark, |#3| as the name-space to define
 %   auxiliaries, and |#4| is the list of conditional variants to define.
@@ -612,11 +612,14 @@
 % \begin{macro}{\@@_test_generate:NNNn, \@@_test_generate:Nccn,
 %   \@@_test_generate_aux:nnNNnNnn, \@@_test_generate_choose:nNnNnn}
 %    \begin{macrocode}
-\cs_new_protected:Npn \__kernel_quark_test_generate:Nn #1#2
+\cs_new_protected:Npn \__kernel_quark_test_generate:N #1
+  { \@@_test_generate_aux:Nn #1 { __ \@@_get_module_name:N #1 } }
+\cs_new_protected:Npn \@@_test_generate_aux:Nn #1 #2
   {
     \@@_test_generate:Nccn #1
       { q #2 _recursion_tail } { q #2 _recursion_stop } {#2}
   }
+\cs_generate_variant:Nn \@@_test_generate_aux:Nn { Nx }
 \cs_new_protected:Npn \@@_test_generate:NNNn #1
   {
     \exp_last_unbraced:Nf \@@_test_generate_aux:nnNNnNnn
@@ -710,9 +713,9 @@
 %   \cs[no-index]{use_(none|i)_delimit_by_q_recursion_stop:(|n)w}.
 %
 %   The name is composed by the name-space and the name of the quarks.
-%   Suppose \cs{__kernel_quark_test_generate:Nn} was used with:
+%   Suppose \cs{__kernel_quark_test_generate:N} was used with:
 %   \begin{verbatim}
-%     \__kernel_quark_test_generate:NNNn \__test_quark_tail:n { __test }
+%     \__kernel_quark_test_generate:N \__test_quark_tail:n
 %   \end{verbatim}
 %   then the first auxiliary will be \cs[no-index]{__test_quark_recursion_tail:w},
 %   and the second one will be
@@ -863,6 +866,56 @@
     #2 \s_@@
   }
 \cs_new:Npn \@@_remove_underscore_end:w #1 \s_@@ {#1}
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}[rEXP]{\@@_get_module_name:N}
+% \begin{macro}[rEXP]{
+%     \@@_get_module_name_auxi:w,
+%     \@@_get_module_name_auxii:w,
+%   }
+%   \cs{@@_get_module_name:N} takes a function and returns the \meta{module} name.
+%   |#1| may be a public function named as
+%   \cs[no-index]{\meta{module}_\meta{name}:\meta{signature}}, or a private
+%   function named as \cs[no-index]{__\meta{module}_\meta{name}:\meta{signature}}
+%   (more precisely, any number of underscore characters are removed from the start
+%   of the function name, and the \meta{module} name is delimited by the next |_|).
+%    \begin{macrocode}
+\cs_new:Npx \@@_get_module_name:N #1
+  {
+    \exp_not:N \exp_last_unbraced:Nf \exp_not:N \@@_get_module_name_auxi:w
+      { \exp_not:N \cs_to_str:N #1 } \token_to_str:N _ \exp_not:N \s_@@
+  }
+\cs_new:Npn \@@_get_module_name_auxi:w #1
+  {
+    \if_meaning:w \s_@@ #1
+      \__kernel_msg_expandable_error:nn { kernel } { invalid-quark-function }
+    \else:
+      \if_charcode:w _ #1
+        \exp_after:wN \use_i:nn
+      \else:
+        \exp_after:wN \use_ii:nn
+      \fi:
+        { \exp_after:wN \@@_get_module_name_auxi:w }
+        {
+          \exp_after:wN \@@_get_module_name_auxii:w
+          \exp_after:wN #1
+        }
+    \fi:
+  }
+\use:x
+  {
+    \cs_new:Npn \exp_not:N \@@_get_module_name_auxii:w ##1
+      \token_to_str:N _ ##2 \exp_not:N \s_@@
+  }
+      {
+        \if:w \scan_stop: \tl_to_str:n {#1} \scan_stop:
+          \__kernel_msg_expandable_error:nn { kernel } { invalid-quark-function }
+        \else:
+          #1
+        \fi:
+      }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
