--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -938,7 +938,7 @@
 % \begin{macro}[EXP]{\@@_if_recursion_tail_stop_do:nn}
 %   Functions to query recursion quarks.
 %    \begin{macrocode}
-\__kernel_quark_test_generate:Nn \@@_if_recursion_tail_stop_do:nn { @@ }
+\__kernel_quark_test_generate:N \@@_if_recursion_tail_stop_do:nn
 %    \end{macrocode}
 % \end{macro}
 %
