--- a/l3kernel/l3text-purify.dtx
+++ b/l3kernel/l3text-purify.dtx
@@ -68,7 +68,7 @@
 % \begin{macro}[EXP]{\@@_if_recursion_tail_stop:N}
 %   Functions to query recursion quarks.
 %    \begin{macrocode}
-\__kernel_quark_test_generate:Nn \@@_if_recursion_tail_stop:N { @@ }
+\__kernel_quark_test_generate:N \@@_if_recursion_tail_stop:N
 %    \end{macrocode}
 % \end{macro}
 %
