--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -295,7 +295,7 @@
 % \begin{macro}[EXP]{\@@_if_recursion_tail_stop_do:Nn}
 %   Functions to query recursion quarks.
 %    \begin{macrocode}
-\__kernel_quark_test_generate:Nn \@@_if_recursion_tail_stop_do:Nn { @@ }
+\__kernel_quark_test_generate:N \@@_if_recursion_tail_stop_do:Nn
 %    \end{macrocode}
 % \end{macro}
 %
