--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1528,7 +1528,7 @@
 % \begin{macro}[pTF]{\@@_if_recursion_tail_stop:n}
 %   Functions to query recursion quarks.
 %    \begin{macrocode}
-\__kernel_quark_test_generate:Nn \@@_if_recursion_tail_break:nN { @@ }
+\__kernel_quark_test_generate:N \@@_if_recursion_tail_break:nN
 \__kernel_quark_conditional_generate:NNnn \@@_if_nil:n
   \q_@@_nil { @@ } { TF }
 %    \end{macrocode}
