Better names for quark conditionals

--- a/l3kernel/l3text.dtx
+++ b/l3kernel/l3text.dtx
@@ -268,10 +268,10 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}[pTF]{\@@_if_nil:n}
+% \begin{macro}[pTF]{\@@_quark_if_nil:n}
 %   Branching quark conditional.
 %    \begin{macrocode}
-\__kernel_quark_conditional_generate:NNnn \@@_if_nil:n
+\__kernel_quark_conditional_generate:NNnn \@@_quark_if_nil:n
   \q_@@_nil { @@ } { TF }
 %    \end{macrocode}
 % \end{macro}
@@ -933,7 +933,7 @@
   { \@@_expand_protect:Nw #2 #1 \q_@@_nil #1 ~ \q_@@_nil \q_@@_nil \s_@@_stop }
 \cs_new:Npn \@@_expand_protect:Nw #1 #2 ~ \q_@@_nil #3 \q_@@_nil #4 \s_@@_stop
   {
-    \@@_if_nil:nTF {#4}
+    \@@_quark_if_nil:nTF {#4}
       {
         \cs_if_exist:cTF {#2}
           { \exp_args:Ne \@@_expand_store:n { \exp_not:c {#2} } }
