--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -1134,10 +1134,10 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}[pTF]{\@@_if_nil:n}
+% \begin{macro}[pTF]{\@@_quark_if_nil:n}
 %   Branching quark conditional.
 %    \begin{macrocode}
-\__kernel_quark_conditional_generate:NNnn \@@_if_nil:N
+\__kernel_quark_conditional_generate:NNnn \@@_quark_if_nil:N
   \q_@@_nil { @@ } { F }
 %    \end{macrocode}
 % \end{macro}
@@ -3302,7 +3302,7 @@
         \@@_compile_cs_aux:Nn
       }
       {
-        \@@_if_nil:NF #1 { \flag_raise_if_clear:n { @@_cs } }
+        \@@_quark_if_nil:NF #1 { \flag_raise_if_clear:n { @@_cs } }
         \@@_use_none_delimit_by_q_recursion_stop:w
       }
   }
@@ -3322,7 +3322,7 @@
         \@@_compile_cs_aux:NNnnnN
       }
       {
-        \@@_if_nil:NF #1
+        \@@_quark_if_nil:NF #1
           {
             \flag_raise_if_clear:n { @@_cs }
             \@@_use_i_delimit_by_q_recursion_stop:nw
